<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_main_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_nombre"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/main_fecha_nacimiento"
                android:maxLines="1"
                android:onClick="abrirCalendario" />

            <EditText
                android:id="@+id/et_fecha_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint=""
                android:maxLines="1"
                android:onClick="abrirCalendario"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_main_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_telefono" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_main_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_main_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_descripcion" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="mostrarConfirmarDatos"
        android:text="@string/main_btn_siguiente"
        android:textColor="@color/colorIcons" />


</RelativeLayout>